--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,16 +23,16 @@
 <resources>
 
     <!-- GENERAL -->
-    <string name="app_name">Flym</string>
-    <string name="about_flym">About Flym</string>
-    <string name="welcome_title">Welcome to Flym. Would you like to add one feed?</string>
+    <string name="app_name">Theekkathir</string>
+    <string name="about_flym">About Theekkathir</string>
+    <string name="welcome_title">Welcome to Theekkathir. Would you like to add one feed?</string>
     <string name="never">never</string>
     <string name="update">Update</string>
     <string name="colon">:\u00A0</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_refresh">Refresh</string>
     <string name="menu_all_read">Mark all as read</string>
-    <string name="flym_feeds">Flym feeds</string>
+    <string name="flym_feeds">Theekkathir News</string>
     <string name="error">Error</string>
     <string name="network_error">The network is not set up</string>
     <string name="loading">Loading…</string>
@@ -42,7 +42,7 @@
 
     <!-- FEEDS -->
     <string name="feeds">Feeds</string>
-    <string name="menu_add_feed">in.theekathir.newsreader</string>
+    <string name="menu_add_feed">Add other site content</string>
     <string name="no_feeds">No feeds</string>
     <string name="no_filters">No rules</string>
     <string name="context_menu_delete">Delete</string>
@@ -87,10 +87,10 @@
     <string name="to_group_above">Above the group</string>
     <string name="to_group_into">Into the group</string>
     <string name="add_custom_feed">Add a custom feed or search for one</string>
-    <string name="google_news_title">Google News topics</string>
-    <string name="google_news_indicator">Select one or several topics to add. Some of them may not be provided by Google for your language.</string>
-    <string name="google_news_top_stories">Top Stories</string>
-    <string name="google_news_world">World</string>
+    <string name="google_news_title">Theekkathir News topics</string>
+    <string name="google_news_indicator">Select one or several topics to add.</string>
+    <string name="google_news_top_stories">ஆசிரியர் பரிந்துரைகள்</string>
+    <string name="google_news_world">உலகச் செய்திகள்</string>
     <string name="google_news_business">Business</string>
     <string name="google_news_technology">Technology</string>
     <string name="google_news_entertainment">Entertainment</string>
@@ -98,6 +98,112 @@
     <string name="google_news_science">Science</string>
     <string name="google_news_health">Health</string>
     <string name="google_news_custom_topic">Enter custom topic</string>
+
+    <!--Theekkathir Category Entries-->
+    <string name="politics">அரசியல்</string>
+    <string name="editor_picks">ஆசிரியர் பரிந்துரைகள்</string>
+    <string name="srilanka">இலங்கை</string>
+    <string name="international">உலகச் செய்திகள்</string>
+    <string name="opinion">கருத்துக்கள்</string>
+    <string name="article">கட்டுரை</string>
+    <string name="cartoon">கார்ட்டூன்</string>
+    <string name="santhegam_samikannu">சந்தேகம் சாமிக்கண்ணு</string>
+    <string name="editorial">தலையங்கம்</string>
+    <string name="interview">நேர்க்காணல்</string>
+    <string name="letter_to_editor">மக்கள் மன்றம்</string>
+    <string name="education">கல்வி</string>
+    <string name="cinema">சினிமா</string>
+    <string name="specials">சிறப்புப் பகுதிகள்</string>
+    <string name="science_technology">அறிவியல்</string>
+    <string name="literature">இலக்கியம்</string>
+    <string name="computer">கணினி</string>
+    <string name="books">புத்தகங்கள்</string>
+    <string name="economics">பொருளாதாரம்</string>
+    <string name="sports">விளையாட்டு</string>
+    <string name="info">தகவல் அறிவோம்</string>
+    <string name="nation">தேசம்</string>
+    <string name="technology">தொழில்நுட்பம்</string>
+    <string name="court">நீதிமன்றம்</string>
+    <string name="facebook_ride">பேஸ்புக் உலா</string>
+    <string name="general">பொதுவானவை</string>
+    <string name="medicine">மருத்துவம்</string>
+    <string name="state">மாநிலச் செய்திகள்</string>
+    <string name="assam">அசாம்</string>
+    <string name="andaman">அந்தமான்</string>
+    <string name="haryana">அரியானா</string>
+    <string name="arunachalpradesh">அருணாச்சல் பிரதேசம்</string>
+    <string name="andhrapradesh">ஆந்திரப் பிரதேசம்</string>
+    <string name="himachal">இமாச்சலப் பிரதேசம்</string>
+    <string name="uttarakhand">உத்தரகண்ட்</string>
+    <string name="uttarpradesh">உத்தரப் பிரதேசம்</string>
+    <string name="odisha">ஒரிசா</string>
+    <string name="karnataka">கர்நாடகா</string>
+    <string name="bengaluru">பெங்களூரு</string>
+    <string name="gujarat">குஜராத்</string>
+    <string name="kerala">கேரளா</string>
+    <string name="goa">கோவா</string>
+    <string name="chandigarh">சண்டிகர்</string>
+    <string name="chhattisgarh">சத்தீஸ்கர்</string>
+    <string name="sikkim">சிக்கிம்</string>
+    <string name="jammuandkashmir">ஜம்மு காஷ்மீர்</string>
+    <string name="jharkhand">ஜார்க்கண்ட்</string>
+    <string name="tamilnadu">தமிழகம்</string>
+    <string name="chennai">சென்னை</string>
+    <string name="dadra">தாத்ரா மற்றும் நகர் ஹவேலி</string>
+    <string name="damananddiu">தாமன், தியு</string>
+    <string name="tripura">திரிபுரா</string>
+    <string name="delhi">தில்லி</string>
+    <string name="telangana">தெலுங்கானா</string>
+    <string name="nagaland">நாகாலாந்து</string>
+    <string name="punjab">பஞ்சாப்</string>
+    <string name="bihar">பீகார்</string>
+    <string name="puducherry">புதுச்சேரி</string>
+    <string name="maharashtra">மகாராஷ்டிரா</string>
+    <string name="mumbai">மும்பை</string>
+    <string name="manipur">மணிப்பூர்</string>
+    <string name="madhyapradesh">மத்தியப் பிரதேசம்</string>
+    <string name="mizoram">மிசோரம்</string>
+    <string name="meghalaya">மேகாலயா</string>
+    <string name="westbengal">மேற்கு வங்காளம்</string>
+    <string name="rajasthan">ராஜஸ்தான்</string>
+    <string name="lakshadweep">லட்சத்தீவுகள்</string>
+    <string name="districts">மாவட்டங்கள்</string>
+    <string name="ariyalur">அரியலூர்</string>
+    <string name="ramanathapuram">இராமநாதபுரம்</string>
+    <string name="erode">ஈரோடு</string>
+    <string name="cuddalore">கடலூர்</string>
+    <string name="kanyakumari">கன்னியாகுமரி</string>
+    <string name="karur">கரூர்</string>
+    <string name="kanchipuram">காஞ்சிபுரம்</string>
+    <string name="krishnagiri">கிருஷ்ணகிரி</string>
+    <string name="coimbatore">கோயம்புத்தூர்</string>
+    <string name="sivaganga">சிவகங்கை</string>
+    <string name="salem">சேலம்</string>
+    <string name="thanjavur">தஞ்சாவூர்</string>
+    <string name="dharmapuri">தர்மபுரி</string>
+    <string name="dindigul">திண்டுக்கல்</string>
+    <string name="trichy">திருச்சி</string>
+    <string name="tirunelveli">திருநெல்வேலி</string>
+    <string name="tirupur">திருப்பூர்</string>
+    <string name="tiruvannamalai">திருவண்ணாமலை</string>
+    <string name="tiruvallur">திருவள்ளூர்</string>
+    <string name="tiruvarur">திருவாரூர்</string>
+    <string name="thoothukudi">தூத்துக்குடி</string>
+    <string name="theni">தேனி</string>
+    <string name="nagapattinam">நாகப்பட்டினம்</string>
+    <string name="namakkal">நாமக்கல்</string>
+    <string name="nilgiris">நீலகிரி</string>
+    <string name="pudukkottai">புதுக்கோட்டை</string>
+    <string name="perambalur">பெரம்பலூர்</string>
+    <string name="pollachi">பொள்ளாச்சி</string>
+    <string name="madurai">மதுரை</string>
+    <string name="virudhunagar">விருதுநகர்</string>
+    <string name="viluppuram">விழுப்புரம்</string>
+    <string name="vellore">வேலூர்</string>
+    <string name="business">வணிகம்</string>
+    <string name="election">வாக்குச்சாவடி</string>
+    <string name="whatsapp_ride">வாஸ்ட் அப் உலா</string>
+    <string name="archive">Archive</string>
 
     <!-- ENTRIES -->
     <string name="unread_entries">Unread</string>
@@ -111,7 +217,7 @@
     <string name="menu_full_screen">Full screen</string>
     <string name="menu_copy_clipboard">Copy link</string>
     <string name="menu_mark_as_unread">Mark as unread</string>
-    <string name="share_favorites_title">Flym: starred entries</string>
+    <string name="share_favorites_title">Theekkathir: starred entries</string>
     <string name="copied_clipboard">Link copied</string>
     <string name="get_full_text">Retrieve the full text</string>
     <string name="original_text">Show original text</string>
@@ -135,7 +241,7 @@
     <!-- SETTINGS -->
     <string name="settings_category_refresh">Automated refresh</string>
     <string name="settings_refresh_enabled">Enable automatic refresh</string>
-    <string name="settings_refresh_enabled_description">Enable the automatic refresh of feeds</string>
+    <string name="settings_refresh_enabled_description">Enable the automatic refresh of News</string>
     <string name="settings_refresh_interval">Refresh interval</string>
     <string name="settings_category_notifications">Notifications</string>
     <string name="settings_notifications_enabled">Enable notifications</string>
@@ -158,14 +264,14 @@
     <string name="settings_display_oldest_first_description">Display oldest entries first</string>
     <string name="settings_display_entries_fullscreen">Auto-fullscreen entries</string>
     <string name="settings_display_entries_fullscreen_description">Automatically display entries in fullscreen</string>
-    <string name="settings_refresh_on_open">Refresh feeds on open</string>
-    <string name="settings_refresh_on_open_description">Refreshes all feeds after opening the application</string>
+    <string name="settings_refresh_on_open">Refresh News on open</string>
+    <string name="settings_refresh_on_open_description">Refreshes all News after opening the application</string>
     <string name="settings_refresh_wifi_only">Refresh only over Wi-Fi</string>
     <string name="settings_refresh_wifi_only_description">Automatic refresh will only be done if Wi-Fi connection is available</string>
-    <string name="settings_visible_feeds">Visible feeds</string>
+    <string name="settings_visible_feeds">Visible News</string>
     <string name="settings_widget_background">Background</string>
     <string name="settings_widget_background_description">Color and transparency of the widget background</string>
-    <string name="all_feeds">All feeds (incl. future)</string>
+    <string name="all_feeds">All News (incl. future)</string>
 
     <plurals name="number_of_new_entries">
         <item quantity="one">One new entry</item>
